fix: resolve popover clipping, update filter icons and fix layout imports

--- a/src/components/layout/Layout.scss
+++ b/src/components/layout/Layout.scss
@@ -1,14 +1,14 @@
 @use '../../styles/variables' as *;
 @use '../../styles/mixins' as *;
 
-.dashboard-layout {
+.layout {
   display: flex;
   flex-direction: column;
   height: 100vh;
   width: 100%;
 }
 
-.dashboard-content {
+.layout-content {
   display: flex;
   flex: 1;
   overflow: hidden;
